Improved login.html and signup.html

--- a/website/login.html
+++ b/website/login.html
@@ -105,6 +105,7 @@
                 <label for="inputPassword5" class="form-label" style="color: white;">Password</label>
                 <input type="password" id="passwordInput" placeholder="Enter Your Password" class="form-control" aria-describedby="passwordHelpBlock" style="width: 90%; margin-top: -5px">
                 <span id="passwordError" style="color: red; font-size: 12px; display: none;"></span>
+                <p style="text-align:left; color:#e0e0e0;margin-bottom: 2px">Password Strength Meter</h1>
                 <div id="passwordStrength" class="strength-meter"></div>
                 <span id="strengthLabel" style="color: white; font-size: 14px; margin-top: 5px; display: none;"></span>
 
