Updated all of the links linking to the README.md file to the correct path in the .github folder.

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <td><a href="https://github.com/multiverseweb/Dataverse" class="table_link">Github Repository</a></td>
             </tr>
             <tr>
-                <td><a href="https://github.com/multiverseweb/Dataverse/blob/main/README.md"
+                <td><a href="https://github.com/multiverseweb/Dataverse/blob/main/.github/README.md"
                         class="table_link">Documentation</a></td>
             </tr>
             <tr>
@@ -260,7 +260,7 @@
     <div class="links">
         <div class="small">
             <div class="link_class">
-                <a href="https://github.com/multiverseweb/Dataverse/blob/main/README.md"
+                <a href="https://github.com/multiverseweb/Dataverse/blob/main/.github/README.md"
                     class="table_link">Documentation</a>
                 <a href="./website/pages/contributor.html" class="table_link">Contributors</a>
                 <a href="website/pages/codeOfconduct.html" class="table_link" target="_blank">Code of Conduct</a>
