--- a/website/pages/codeOfconduct.html
+++ b/website/pages/codeOfconduct.html
@@ -53,7 +53,7 @@
                 <td><a href="https://github.com/multiverseweb/Dataverse" class="table_link">Github Repository</a></td>
             </tr>
             <tr>
-                <td><a href="https://github.com/multiverseweb/Dataverse/blob/main/README.md"
+                <td><a href="https://github.com/multiverseweb/Dataverse/blob/main/.github/README.md"
                         class="table_link">Documentation</a></td>
             </tr>
             <tr>
