--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
             Gupta</p>
         <br>
         <p style="color:rgb(177, 177, 177);">&copy; <span id="copyright">32949832</span> <a
-                href=".github/404.html">Tejas Gupta</a></p>
+                href="404.html">Tejas Gupta</a></p>
     </div>
     <div class="end_line"></div>
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
