--- a/website/pages/signup.html
+++ b/website/pages/signup.html
@@ -31,6 +31,27 @@
             right: 84%;
             rotate: -46deg;
         }
+        .password_field_container {
+            display: flex;
+            flex-direction: row;
+            justify-content: flex-start;
+            position: relative;
+        }
+        .password_field_container img {
+            position: absolute;
+            top: 10px;
+            right: 53px;
+            top: -2.5px;
+        }
+        .view_password {
+            width: 23px;
+            height: 23px;
+            opacity: 85%;
+            cursor: pointer;
+        }
+        .password_visible {
+            filter: invert(0.2);
+        }
         .login-container {
             backdrop-filter: blur(10px);
             margin-bottom: 100px;
@@ -75,12 +96,18 @@
             </div>
             <div style="text-align: left; margin-left: 10%;" class="mb-3">
                 <label for="passwordInput" class="form-label" style="color: white;">Password</label>
-                <input type="password" placeholder="Enter your Password" id="passwordInput" class="form-control" aria-describedby="passwordHelpBlock" style="width: 90%; margin-top: -5px">
-            </div>
+                <div class="password_field_container">
+                    <input type="password" placeholder="Enter your Password" id="passwordInput" class="form-control" aria-describedby="passwordHelpBlock" style="width: 90%; margin-top: -5px">
+                    <img src="../web_images/view_password.png" alt="view/hide_password" class="view_password">
+                </div>
+                </div>
             <div style="text-align: left; margin-left: 10%;" class="mb-3">
                 <label for="confirmPasswordInput" class="form-label" style="color: white;">Confirm Password</label>
-                <input type="password" placeholder="Confirm your Password" id="confirmPasswordInput" class="form-control" aria-describedby="passwordHelpBlock" style="width: 90%; margin-top: -5px">
-            </div>
+                <div class="password_field_container">
+                    <input type="password" placeholder="Confirm your Password" id="confirmPasswordInput" class="form-control" aria-describedby="passwordHelpBlock" style="width: 90%; margin-top: -5px">
+                    <img src="../web_images/view_password.png" alt="view/hide_password" class="view_password">
+                </div>
+                </div>
             <div id="passwordHelpBlock" class="form-text" style="width: 90%; text-align: left; margin-top: -10px; margin-left: 10px; color: white;">
                 <span style="color: rgb(255, 255, 255); font-size: 14px; position: relative;">Your password must be :</span><br>
                 • 8-20 characters long.<br>
@@ -101,6 +128,20 @@
         </div>
         <a href="../../index.html"><button class="goBack">Go To Home</button></a>
         <script>
+            // password hide/view handling
+            const viewPasswordIcons = document.getElementsByClassName('view_password');
+            Array.from(viewPasswordIcons).forEach((icon) => {
+                icon.addEventListener("click", function (event) {
+                    if(event.target.previousElementSibling.type === 'password') {
+                        event.target.previousElementSibling.type = 'text';
+                        event.target.classList.toggle('password_visible');
+                    } else {
+                        event.target.previousElementSibling.type = 'password';
+                        event.target.classList.toggle('password_visible');
+                    }
+                })
+            })
+
             // Function to handle signup
             document.getElementById('signupButton').addEventListener('click', function () {
                 const emailInput = document.getElementById('emailInput');
@@ -126,6 +167,11 @@
                     errorContainer.style.display = 'block'; // Show error message
                     return;
                 }
+
+                // Make sure to return the password fields to the type['password']
+                Array.from(viewPasswordIcons).forEach((icon) => {
+                    icon.previousElementSibling.type = 'password';
+                })
 
                 // Check if passwords match
                 if (passwordInput.value !== confirmPasswordInput.value) {
