--- a/website/pages/login.html
+++ b/website/pages/login.html
@@ -38,20 +38,30 @@
             justify-content: flex-start;
             position: relative;
         }
-        .password_field_container img {
+        /* .password_field_container input {
+            
+        } */
+        .password_icon {
             position: absolute;
             top: 10px;
-            right: 53px;
+            right: 60px;
             top: -2.5px;
-        }
-        .view_password {
-            width: 23px;
-            height: 23px;
+            width: 25px;
+            height: 25px;
             opacity: 85%;
             cursor: pointer;
+            background-color: #fff;
+            z-index: 1;
         }
-        .password_visible {
-            filter: invert(0.2);
+        #icon_overlay {
+            visibility: hidden;
+            width: 25px;
+            height: 13px;
+            border-radius: 20px;
+            position: absolute;
+            right: 60px;
+            top: 3.2px;
+            background-color: rgba(0, 0, 0, 0.6);
         }
         .login-container {
             width: 40vw;
@@ -65,8 +75,8 @@
             border-radius: 10px;
         }
         .form-check-input:checked {
-    background-color: #004ab7; /* Change to your desired color */
-    border-color: #004ab7; /* Change to your desired color */
+            background-color: #004ab7; /* Change to your desired color */
+            border-color: #004ab7; /* Change to your desired color */
 }
 
         @media screen and (max-width: 660px) {
@@ -104,8 +114,9 @@
             <div style="text-align: left; margin-left: 10%;" class="mb-3">
                 <label for="inputPassword5" class="form-label" style="color: white;">Password</label>
                 <div class="password_field_container">
-                    <input type="password" id="passwordInput" placeholder="Enter Your Password" class="form-control" aria-describedby="passwordHelpBlock" style="width: 90%; margin-top: -5px">
-                    <img src="../web_images/view_password.png" alt="view/hide password" id="view_password" class="view_password">
+                    <input type="password" id="passwordInput" placeholder="Enter Your Password" class="form-control password-field" aria-describedby="passwordHelpBlock" style="width: 90%; margin-top: -5px">
+                    <img src="../web_images/view_password_icon.png" alt="view  password" id="password_icon" class="password_icon">
+                    <div id="icon_overlay"></div>
                 </div>
                 <div id="passwordHelpBlock" class="form-text" style="color:white; width: 90%; text-align: left; margin-top: -10px; margin-left: 10px;">
                     <p style="text-align: right; margin-top: 15px; font-size: medium; margin-bottom: 5px;"><a href="#" style=" text-decoration: none; color: #004ab7;" id="forget">Forget Password?</a></p>
@@ -136,16 +147,49 @@
                 document.getElementById('emailInput').value = savedEmail;
                 document.getElementById('rememberMe').checked = true;
             }
+
+            // Resize password icon and icon overlay on load
+            adjustIconPos();
         };
 
+        function adjustIconPos() {
+        if(window.innerWidth < 700 && window.innerWidth > 630) {
+            document.getElementById('password_icon').style.right = '35px';
+            document.getElementById('icon_overlay').style.right = '35px';
+        } else if(window.innerWidth < 600 && window.innerWidth > 500) {
+            document.getElementById('password_icon').style.right = '60px';
+            document.getElementById('icon_overlay').style.right = '60px';
+        } else if(window.innerWidth < 500 && window.innerWidth > 400) {
+            document.getElementById('password_icon').style.right = '50px';
+            document.getElementById('icon_overlay').style.right = '50px';
+        } else if(window.innerWidth < 400 && window.innerWidth > 300) {
+            document.getElementById('password_icon').style.right = '40px';
+            document.getElementById('icon_overlay').style.right = '40px';
+        } else if(window.innerWidth < 300) {
+            document.getElementById('password_icon').style.right = '35px';
+             document.getElementById('icon_overlay').style.right = '35px';
+        } else if(window.innerWidth > 900) {
+            document.getElementById('password_icon').style.right = '55px';
+             document.getElementById('icon_overlay').style.right = '55px';
+        }
+        }
+        // Adjust password icon and icon overlay on resize
+        window.addEventListener("resize", adjustIconPos);
+
         // Password hide/view handling
-        document.getElementById('view_password').addEventListener("click", function (event) {
+        document.getElementById('password_icon').addEventListener("click", function (event) {
             if(event.target.previousElementSibling.type === 'password') {
                 event.target.previousElementSibling.type = 'text';
-                event.target.classList.toggle('password_visible');
+                event.target.src = '../web_images/hide_password_icon.png';
+                event.target.previousElementSibling.focus();
+                event.target.alt = 'hide password';
+                document.getElementById('icon_overlay').style.visibility = 'visible';
             } else {
                 event.target.previousElementSibling.type = 'password';
-                event.target.classList.toggle('password_visible');
+                event.target.src = '../web_images/view_password_icon.png';
+                event.target.previousElementSibling.focus(); 
+                event.target.alt = 'view password';
+                document.getElementById('icon_overlay').style.visibility = 'hidden';
             }
         })
 
@@ -156,7 +200,7 @@
             const emailRegex = /^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$/;
                 
             // Make sure to return the password field to the type['password']
-            document.getElementById('veiew_password').previousElementSibling.type = 'password';
+            document.querySelector('password-field').type = 'password';
 
             if (!emailRegex.test(emailValue)) {
                 alert('Invalid email address');
