Removed the links to the script.js file, fixed a minor bug.

--- a/website/pages/login.html
+++ b/website/pages/login.html
@@ -205,8 +205,9 @@
             const emailRegex = /^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$/;
                 
             // Make sure to return the password field to the type['password']
-            document.querySelector('password-field').type = 'password';
-
+            Array.from(document.getElementsByClassName('password-field')).forEach((field) => {
+                field.type = 'password';
+            })
             if (!emailRegex.test(emailValue)) {
                 alert('Invalid email address');
                 return;
@@ -229,6 +230,5 @@
         });
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="../scripts/script.js"></script>
 </body>
 </html>
