--- a/website/pages/signup.html
+++ b/website/pages/signup.html
@@ -233,7 +233,7 @@
                 }
 
                 // Make sure to return the password fields to the type['password']
-                Array.from(viewPasswordIcons).forEach((icon) => {
+                Array.from(passwordIcons).forEach((icon) => {
                     icon.previousElementSibling.type = 'password';
                 })
 
@@ -271,6 +271,5 @@
             };
         </script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-        <script src="../scripts/script.js"></script>
     </body>
 </html>
