--- a/website/pages/login.html
+++ b/website/pages/login.html
@@ -46,8 +46,8 @@
             top: 10px;
             right: 60px;
             top: -2.5px;
-            width: 27px;
-            height: 27px;
+            width: 25px;
+            height: 25px;
             opacity: 85%;
             cursor: pointer;
             background-color: #fff;
@@ -55,7 +55,7 @@
         }
         #icon_overlay {
             visibility: hidden;
-            width: 27px;
+            width: 25px;
             height: 13px;
             border-radius: 20px;
             position: absolute;
@@ -92,7 +92,7 @@
                 height: 100px;
                 overflow-x: hidden;
             }
-            #forget {
+            #forgot {
                 width: 90%;
             }
         }
@@ -119,7 +119,7 @@
                     <div id="icon_overlay"></div>
                 </div>
                 <div id="passwordHelpBlock" class="form-text" style="color:white; width: 90%; text-align: left; margin-top: -10px; margin-left: 10px;">
-                    <p style="text-align: right; margin-top: 15px; font-size: medium; margin-bottom: 5px;"><a href="#" style=" text-decoration: none; color: #004ab7;" id="forget">Forget Password?</a></p>
+                    <p style="text-align: right; margin-top: 15px; font-size: medium; margin-bottom: 5px;"><a href="#" style=" text-decoration: none; color: #004ab7;" id="forgot">Forgot Password?</a></p>
                     <span style="color: rgb(255, 255, 255); font-size: 14px; position: relative;" id="content">Your password must be :</span><br>
                     • 8-20 characters long.<br>
                     • Should contain letters and numbers.<br>
@@ -150,30 +150,6 @@
 
             // Resize password icon and icon overlay on load
             adjustIconPos();
-
-            // Password hide/view handling
-            document.getElementById('password_icon').addEventListener("click", function (event) {
-                if(event.target.previousElementSibling.type === 'password') {
-                    event.target.previousElementSibling.type = 'text';
-                    event.target.src = '../web_images/hide_password_icon.png';
-                    event.target.previousElementSibling.focus();
-                    event.target.alt = 'hide password';
-                    document.getElementById('icon_overlay').style.visibility = 'visible';
-                } else {
-                    event.target.previousElementSibling.type = 'password';
-                    event.target.src = '../web_images/view_password_icon.png';
-                    event.target.previousElementSibling.focus(); 
-                    event.target.alt = 'view password';
-                    document.getElementById('icon_overlay').style.visibility = 'hidden';
-                }
-            })
-            // Autoamtically click to remove an unknown figure that appears on load.
-        document.getElementById('passwordInput').value = '12345678';
-        document.getElementById('password_icon').click();
-        setTimeout(() => {
-            document.getElementById('passwordInput').value = '';
-            document.getElementById('password_icon').click();
-        }, 50);
         };
 
         function adjustIconPos() {
@@ -200,6 +176,23 @@
         // Adjust password icon and icon overlay on resize
         window.addEventListener("resize", adjustIconPos);
 
+        // Password hide/view handling
+        document.getElementById('password_icon').addEventListener("click", function (event) {
+            if(event.target.previousElementSibling.type === 'password') {
+                event.target.previousElementSibling.type = 'text';
+                event.target.src = '../web_images/hide_password_icon.png';
+                event.target.previousElementSibling.focus();
+                event.target.alt = 'hide password';
+                document.getElementById('icon_overlay').style.visibility = 'visible';
+            } else {
+                event.target.previousElementSibling.type = 'password';
+                event.target.src = '../web_images/view_password_icon.png';
+                event.target.previousElementSibling.focus(); 
+                event.target.alt = 'view password';
+                document.getElementById('icon_overlay').style.visibility = 'hidden';
+            }
+        })
+
         document.getElementById('loginButton').addEventListener('click', function() {
             const emailInput = document.getElementById('emailInput');
             const passwordInput = document.getElementById('passwordInput');
@@ -207,9 +200,8 @@
             const emailRegex = /^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$/;
                 
             // Make sure to return the password field to the type['password']
-            Array.from(document.getElementsByClassName('password-field')).forEach((field) => {
-                field.type = 'password';
-            })
+            document.querySelector('.password-field').type = 'password';
+
             if (!emailRegex.test(emailValue)) {
                 alert('Invalid email address');
                 return;
@@ -232,5 +224,6 @@
         });
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="../scripts/script.js"></script>
 </body>
 </html>
