Fixed wrong link paths.

--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
     <div class="links">
         <div class="small">
             <div class="link_class">
-                <a href="https://github.com/multiverseweb/Dataverse/blob/main/.github/README.md"
+                <a href="https://github.com/multiverseweb/Dataverse/blob/main/README.md"
                     class="table_link">Documentation</a>
                 <a href="./website/pages/contributor.html" class="table_link">Contributors</a>
                 <a href="website/pages/codeOfconduct.html" class="table_link" target="_blank">Code of Conduct</a>
